@@ -126,3 +126,4 @@ endif()
 include(processorcount.cmake)
 include(clang_tidy.cmake)
 include(iwyu.cmake)
+include(cppcheck.cmake)
